@@ -1,3 +1,7 @@
+2004-06-18 Magnus Hagdorn
+ * make a disitinction between polar stereographic and general stereographic
+   projections.
+
 2004-06-17 Magnus Hagdorn
  * added aspect ratio to CF_file.py
  * added check for number of arguments (CF_options.py, CF_area.py)
